Fix hero image overflow on mobile

--- a/skilled-elearning-landing-page/src/styles/compositions/view-box.css
+++ b/skilled-elearning-landing-page/src/styles/compositions/view-box.css
@@ -2,6 +2,7 @@
 .view-box {
   inline-size: var(--view-box-width);
   block-size: var(--view-box-height);
+  contain: layout;
 }
 
 .view-box > * {
