--- a/skilled-elearning-landing-page/src/styles/global.css
+++ b/skilled-elearning-landing-page/src/styles/global.css
@@ -7,8 +7,6 @@ body {
 
   --center-gutters: var(--gutters);
 
-  /* hide hero image overflow */
-  overflow-x: hidden;
   font-family: var(--font);
   font-size: var(--text-body-s);
   font-weight: var(--weight-medium);
